--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "element-ui": "^2.13.0",
+    "fuse.js": "^3.4.6",
     "js-cookie": "^2.2.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
+    "path-to-regexp": "^6.1.0",
     "register-service-worker": "^1.6.2",
+    "screenfull": "^5.0.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
@@ -39,6 +43,6 @@
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.0",
     "svgo": "^1.3.2",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.11"
   }
 }
