--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,8 +1,8 @@
 # just a flag
 ENV = 'development'
 
-# base api
-VUE_APP_BASE_API = '/dev-api'
+# backend url
+VUE_APP_BACKEND_HOST = 'http://127.0.0.1:8000'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
