--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.0",
+    "script-ext-html-webpack-plugin": "^2.1.4",
     "svg-sprite-loader": "^4.1.6",
     "svgo": "^1.3.2",
     "vue-template-compiler": "^2.6.11"
